# SnapLevelEditor

./: CMakeLists.txt  README.md
src/: CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  StyleSheet.h  TilesetPanel.cpp  TilesetPanel.h  main.cpp
src/Commands/: UndoCommands.cpp  UndoCommands.h
src/Model/: GameObject.h  GameObjectDef.cpp  GameObjectDef.h  Layer.cpp  Layer.h  Room.cpp  Room.h  Tile.h  World.cpp  World.h
src/Renderer/: MapView.cpp  MapView.h
src/Serialization/: WorldSerializer.cpp  WorldSerializer.h
